<resources>
    <string name="app_name">Flybits Basics</string>

    <!-- Buttons -->
    <string name="btnConnect">Connect</string>
    <string name="btnDisconnect">Disconnect</string>
    <string name="btnCheckConnection">Is Connected?</string>
    <string name="btnGetRelevant">Get Relevant Content</string>
    <string name="btnGetContent">Get All Content</string>

    <!-- Side Menu -->
    <string name="sideMenu1">Connecting</string>
    <string name="sideMenu2">Content</string>
    <string name="sideMenu3">Push History</string>
    <string name="sideMenu4">Context Data</string>

    <!-- Button -->
    <string name="btnStart">Start</string>
    <string name="btnStop">Stop</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="infoConnect">Make sure you Connect!</string>
    <string name="infoConnected">You are connected to Flybits!</string>

    <!-- Push Notifications -->
    <string name="pushChannel">Flybits Push Message</string>
    <string name="pushEmptyTitle">Received Notification</string>

</resources>
