<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:padding="20dp"
        android:orientation="vertical">

    <Button
            android:id="@+id/btnConnect"
            style="@style/btnGeneric"
            android:text="@string/btnConnect"/>
    <Button
            android:id="@+id/btnDisconnect"
            style="@style/btnGeneric"
            android:text="@string/btnDisconnect"/>
    <Button
            android:id="@+id/btnIsConnected"
            style="@style/btnGeneric"
            android:text="@string/btnCheckConnection"/>
</LinearLayout>